[package]
name = "arborist"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
serde_with = { version = "3.11.0" }
clap = { version = "4.5.20", features = ["derive"] }
mime_guess = "2.0.5"
tokio = { version = "1.41.1", features = ["full", "rt-multi-thread"] }
walkdir = "2.5.0"
ollama-rs = { version = "0.2.1", features = ["function-calling"] }
qdrant-client = { version = "1.12.1", features = ["serde"] }
serde = { version = "1.0.214", features = ["derive"] }
pandoc = "0.8.11"
pdf-extract = "0.7.10"
calamine = "0.26.1"
base64 = "0.22.1"
dotext = "0.1.1"
tonic = "0.12.3"
serde_json = "1.0.133"
fastembed = { git = "https://github.com/edgerunnergit/fastembed-rs", branch = "main" }
text-splitter = { version = "0.18.1", features = ["tokenizers"] }
tokenizers = { version = "0.20.3", features = ["http"] }
uuid = { version = "1.11.0", features = ["v4"] }
rand = "0.8.5"
toml = "0.8.19"
dirs = "5.0.1"
env_logger = "0.11.5"
log = "0.4.22"
